--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "covered-call-strategist",
   "version": "1.0.0",
@@ -14,6 +13,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.4",
     "vite": "^4.5.0"
   }
 }
